--- a/app/src/main/res/layout/activity_pods.xml
+++ b/app/src/main/res/layout/activity_pods.xml
@@ -6,6 +6,6 @@
     android:columnWidth="90dp"
     android:gravity="center"
     android:horizontalSpacing="10dp"
-    android:numColumns="auto_fit"
+    android:numColumns="3"
     android:stretchMode="columnWidth"
     android:verticalSpacing="10dp" />
