--- a/app/src/main/res/layout/gridlayout_item.xml
+++ b/app/src/main/res/layout/gridlayout_item.xml
@@ -10,30 +10,47 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="5dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginRight="5dp"
+        android:background="@drawable/grid_view_item"
+        android:orientation="vertical"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0">
 
         <ImageView
             android:id="@+id/item_image"
-            android:layout_width="80dp"
-            android:layout_height="80dp"
-            android:src="@mipmap/ic_launcher"
-            tools:layout_editor_absoluteX="0dp"
-            tools:layout_editor_absoluteY="0dp" />
+            android:layout_width="match_parent"
+            android:layout_height="118dp"
+            android:padding="10dp"
+            app:srcCompat="@drawable/pod" />
+
+        <ImageView
+            android:id="@+id/pod_status_image"
+            android:layout_width="match_parent"
+            android:layout_height="37dp"
+            app:srcCompat="@mipmap/ic_launcher" />
 
         <TextView
             android:id="@+id/item_text"
-            android:layout_width="80dp"
+            android:layout_width="match_parent"
             android:layout_height="100dp"
             android:layout_marginTop="20dp"
             android:layout_marginBottom="8dp"
-            android:text="This is a dummy text"
+            android:text="@string/pod_name"
             android:textAlignment="center"
             android:textSize="18sp"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/item_image"
             tools:layout_editor_absoluteX="0dp" />
+
+
     </LinearLayout>
 
 </android.support.constraint.ConstraintLayout>
