Services activities done

--- a/app/src/main/res/layout/activity_pod.xml
+++ b/app/src/main/res/layout/activity_pod.xml
@@ -8,8 +8,8 @@
 
     <LinearLayout
         android:id="@+id/linearLayout"
-        android:layout_width="379dp"
-        android:layout_height="245dp"
+        android:layout_width="387dp"
+        android:layout_height="293dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="8dp"
@@ -21,7 +21,8 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="54dp"
+            android:layout_height="71dp"
+            android:layout_marginTop="@dimen/detailed_margin_top"
             android:orientation="horizontal"
             android:weightSum="3">
 
@@ -33,16 +34,6 @@
                 android:src="@drawable/pod"
                 android:textAlignment="viewEnd" />
 
-            <!--<TextView-->
-            <!--android:id="@+id/pod_name_label"-->
-            <!--android:layout_width="0dp"-->
-            <!--android:layout_height="match_parent"-->
-            <!--android:layout_weight="1"-->
-            <!--android:gravity="center"-->
-            <!--android:text="@string/name"-->
-            <!--android:textAlignment="viewEnd"-->
-            <!--android:textSize="@dimen/pod_detail" />-->
-
             <TextView
                 android:id="@+id/pod_name"
                 android:layout_width="0dp"
@@ -51,13 +42,15 @@
                 android:gravity="center"
                 android:text="@string/placeholder"
                 android:textAlignment="center"
-                android:textSize="@dimen/pod_detail" />
+                android:textSize="@dimen/pod_detail_name"
+                android:textStyle="bold" />
 
         </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="47dp"
+            android:layout_marginTop="@dimen/detailed_margin_top"
             android:orientation="horizontal"
             android:weightSum="3">
 
@@ -87,6 +80,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="43dp"
+            android:layout_marginTop="@dimen/detailed_margin_top"
             android:orientation="horizontal"
             android:weightSum="3">
 
@@ -116,6 +110,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="38dp"
+            android:layout_marginTop="@dimen/detailed_margin_top"
             android:orientation="horizontal"
             android:weightSum="3">
 
@@ -146,6 +141,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="62dp"
+            android:layout_marginTop="@dimen/detailed_margin_top"
             android:orientation="horizontal"
             android:weightSum="3">
 
@@ -182,6 +178,6 @@
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/linearLayout"
-        app:layout_constraintVertical_bias="0.029" />
+        app:layout_constraintVertical_bias="0.0" />
 
 </android.support.constraint.ConstraintLayout>
