--- a/app/src/main/res/layout/activity_services.xml
+++ b/app/src/main/res/layout/activity_services.xml
@@ -6,4 +6,14 @@
     android:layout_height="match_parent"
     tools:context=".ServicesActivity">
 
+    <GridView
+        android:id="@+id/services_gridview"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:columnWidth="90dp"
+        android:gravity="center"
+        android:horizontalSpacing="10dp"
+        android:numColumns="3"
+        android:stretchMode="columnWidth"
+        android:verticalSpacing="10dp" />
 </android.support.constraint.ConstraintLayout>
