--- a/app/src/main/res/layout/gridlayout_item.xml
+++ b/app/src/main/res/layout/gridlayout_item.xml
@@ -31,7 +31,7 @@
             app:srcCompat="@drawable/pod" />
 
         <ImageView
-            android:id="@+id/pod_status_image"
+            android:id="@+id/status_image"
             android:layout_width="match_parent"
             android:layout_height="37dp"
             app:srcCompat="@mipmap/ic_launcher" />
