--- a/app/src/main/res/layout/activity_nodes.xml
+++ b/app/src/main/res/layout/activity_nodes.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<GridView android:id="@+id/services_gridview"
+<GridView android:id="@+id/nodes_gridview"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:columnWidth="90dp"
