--- a/app/src/main/res/layout/activity_pod.xml
+++ b/app/src/main/res/layout/activity_pod.xml
@@ -1,27 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:gravity="right"
+    android:orientation="vertical"
     tools:context=".PodActivity">
 
     <LinearLayout
         android:id="@+id/linearLayout"
-        android:layout_width="387dp"
-        android:layout_height="293dp"
+        android:layout_width="wrap_content"
+        android:layout_height="216dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="8dp"
-        android:orientation="vertical"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        android:orientation="vertical">
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="71dp"
+            android:layout_height="61dp"
             android:layout_marginTop="@dimen/detailed_margin_top"
             android:orientation="horizontal"
             android:weightSum="3">
@@ -49,37 +47,7 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="47dp"
-            android:layout_marginTop="@dimen/detailed_margin_top"
-            android:orientation="horizontal"
-            android:weightSum="3">
-
-            <TextView
-                android:id="@+id/pod_uid_label"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:gravity="center"
-                android:text="@string/uid"
-                android:textAlignment="viewEnd"
-                android:textSize="@dimen/item_detail"
-                android:textStyle="bold" />
-
-            <TextView
-                android:id="@+id/pod_uid"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="2"
-                android:gravity="center"
-                android:text="@string/placeholder"
-                android:textAlignment="center"
-                android:textSize="@dimen/item_detail" />
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="43dp"
+            android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/detailed_margin_top"
             android:orientation="horizontal"
             android:weightSum="3">
@@ -140,7 +108,7 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="62dp"
+            android:layout_height="53dp"
             android:layout_marginTop="@dimen/detailed_margin_top"
             android:orientation="horizontal"
             android:weightSum="3">
@@ -167,8 +135,8 @@
 
     <View
         android:id="@+id/divider2"
-        android:layout_width="368dp"
-        android:layout_height="3dp"
+        android:layout_width="match_parent"
+        android:layout_height="11dp"
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
@@ -178,6 +146,32 @@
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/linearLayout"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintVertical_bias="0.008" />
 
-</android.support.constraint.ConstraintLayout>
+    <Spinner
+        android:id="@+id/pod_metrics_spinner"
+        android:layout_width="wrap_content"
+        android:layout_height="36dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginBottom="8dp"
+        android:spinnerMode="dropdown"/>
+
+    <com.github.mikephil.charting.charts.LineChart
+        android:id="@+id/pod_chart"
+        android:layout_width="397dp"
+        android:layout_height="286dp"
+        android:layout_marginStart="4dp"
+        android:layout_marginTop="4dp"
+        android:layout_marginEnd="4dp"
+        android:layout_marginBottom="4dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/divider2" />
+
+</LinearLayout>
