--- a/app/src/main/res/layout/activity_node.xml
+++ b/app/src/main/res/layout/activity_node.xml
@@ -1,27 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:gravity="right|center"
+    android:orientation="vertical"
     tools:context=".NodeActivity">
 
     <LinearLayout
         android:id="@+id/linearLayout"
-        android:layout_width="387dp"
-        android:layout_height="293dp"
+        android:layout_width="395dp"
+        android:layout_height="226dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="8dp"
-        android:orientation="vertical"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        android:gravity="center_vertical|center_horizontal"
+        android:orientation="vertical">
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="71dp"
+            android:layout_height="63dp"
             android:layout_marginTop="@dimen/detailed_margin_top"
             android:orientation="horizontal"
             android:weightSum="3">
@@ -44,36 +43,6 @@
                 android:textAlignment="center"
                 android:textSize="@dimen/item_detail_name"
                 android:textStyle="bold" />
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="47dp"
-            android:layout_marginTop="@dimen/detailed_margin_top"
-            android:orientation="horizontal"
-            android:weightSum="3">
-
-            <TextView
-                android:id="@+id/node_uid_label"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:gravity="center"
-                android:text="@string/uid"
-                android:textAlignment="viewEnd"
-                android:textSize="@dimen/item_detail"
-                android:textStyle="bold" />
-
-            <TextView
-                android:id="@+id/node_uid"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="2"
-                android:gravity="center"
-                android:text="@string/placeholder"
-                android:textAlignment="center"
-                android:textSize="@dimen/item_detail" />
 
         </LinearLayout>
 
@@ -173,18 +142,37 @@
 
     <View
         android:id="@+id/node_divider"
-        android:layout_width="368dp"
-        android:layout_height="3dp"
+        android:layout_width="match_parent"
+        android:layout_height="5dp"
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
-        android:background="?android:attr/listDivider"
+        android:background="?android:attr/listDivider" />
+
+    <Spinner
+        android:id="@+id/node_metrics_spinner"
+        android:layout_width="wrap_content"
+        android:layout_height="36dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginBottom="8dp"
+        android:spinnerMode="dropdown" />
+
+    <com.github.mikephil.charting.charts.LineChart
+        android:id="@+id/node_chart"
+        android:layout_width="match_parent"
+        android:layout_height="286dp"
+        android:layout_marginStart="4dp"
+        android:layout_marginTop="4dp"
+        android:layout_marginEnd="4dp"
+        android:layout_marginBottom="4dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintTop_toBottomOf="@+id/divider2" />
 
-
-</android.support.constraint.ConstraintLayout>
+</LinearLayout>
