--- a/app/src/main/res/layout/activity_services.xml
+++ b/app/src/main/res/layout/activity_services.xml
@@ -1,12 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<GridView android:id="@+id/services_gridview"
-    android:layout_width="match_parent"
+
+
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/services_main_view"
     android:layout_height="match_parent"
-    android:columnWidth="90dp"
-    android:gravity="center"
-    android:horizontalSpacing="10dp"
-    android:numColumns="3"
-    android:stretchMode="columnWidth"
-    android:verticalSpacing="10dp"
-    xmlns:android="http://schemas.android.com/apk/res/android" />
+    android:layout_width="match_parent"
+    android:orientation="horizontal">
+
+    <GridView android:id="@+id/services_gridview"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:columnWidth="90dp"
+        android:gravity="center"
+        android:horizontalSpacing="10dp"
+        android:numColumns="3"
+        android:stretchMode="columnWidth"
+        android:verticalSpacing="10dp">
+    </GridView>
+
+    <TextView
+        android:id="@+id/services_empty_text_view"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:gravity="center"
+        android:text="@string/there_are_no_items_for_this_namespace"
+        android:textAlignment="center"
+        android:textSize="18sp"
+        android:textStyle="bold" />
+</LinearLayout>
+
+
+
+
