--- a/app/src/main/res/layout/activity_service.xml
+++ b/app/src/main/res/layout/activity_service.xml
@@ -8,7 +8,7 @@
 
     <LinearLayout
         android:id="@+id/linearLayout"
-        android:layout_width="361dp"
+        android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginStart="8dp"
         android:layout_marginTop="16dp"
@@ -88,7 +88,7 @@
             <TextView
                 android:id="@+id/service_namespace_label"
                 android:layout_width="0dp"
-                android:layout_height="41dp"
+                android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:gravity="center"
                 android:text="@string/namespace"
@@ -149,7 +149,7 @@
             <TextView
                 android:id="@+id/service_ip_type"
                 android:layout_width="0dp"
-                android:layout_height="60dp"
+                android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:gravity="center"
                 android:text="@string/placeholder"
@@ -179,7 +179,7 @@
             <TextView
                 android:id="@+id/service_protocol_label"
                 android:layout_width="0dp"
-                android:layout_height="60dp"
+                android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:gravity="center"
                 android:text="@string/protocol"
@@ -209,7 +209,7 @@
             <TextView
                 android:id="@+id/service_port_label"
                 android:layout_width="0dp"
-                android:layout_height="60dp"
+                android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:gravity="center"
                 android:text="@string/port"
@@ -239,7 +239,7 @@
             <TextView
                 android:id="@+id/service_target_port_label"
                 android:layout_width="0dp"
-                android:layout_height="60dp"
+                android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:gravity="center"
                 android:text="@string/targetPort"
